# SvelgoCMS-Backend

./: .gitignore  manage.py  pyproject.toml
SvelgoCMS/: asgi.py  settings.py  urls.py  wsgi.py
